--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,6 +1,7 @@
  .footer { padding: 10px;
-    background: #12253eff;
+   background: linear-gradient(135deg,#141e30,#243b55);
      color: white;
-      text-align: "center";
-      margin-top: "20px";
+      text-align: center;
+      margin:1px;
+      font-size: 1rem;
      }
