--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,56 +1,14 @@
-.navbar {
-  width: 100%;
-  background: #0a2540;
-  
+.navbar{
+  color: aliceblue;
+ background: linear-gradient(135deg,#141e30,#243b55);
+ width:100%;
+}
+
+.nav-links{
+   background: linear-gradient(135deg,#141e30,#243b55);
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 12px 25px;
-  font-size: 18px;
-  position: sticky;
-  top: 0;
-  z-index: 999;
-}
-
-.logo {
-  font-size: 22px;
-  font-weight: bold;
-  cursor: pointer;
-  color: #fff;
-}
-
-.nav-links {
-  display: flex;
-  list-style: none;
-  gap: 40px;
-}
-
-.nav-links a,
-.nav-links li {
-  color: #fff;
-  text-decoration: none;
-  cursor: pointer;
-  transition: .3s;
-}
-
-.nav-links a:hover,
-.nav-links li:hover {
-  color: #f7c87c;
-}
-
-.logout-btn,
-.login-btn {
-  background: #f7c87c;
-  color: #0a2540;
-  border: none;
-  padding: 7px 14px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-weight: bold;
-  transition: .3s ease;
-}
-
-.logout-btn:hover,
-.login-btn:hover {
-  background: #fff;
+  padding-left: 10px;
+  gap: 30px;
+  margin-top: 10px;
+width:100%;
 }
