--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,6 @@
 body {
-  margin: 0;
-  font-family: Arial, sans-serif;
+  margin: 0 0;
+font-family: Arial, sans-serif;
   background-color: #f7f7f7c6;
 }
 
@@ -9,7 +9,7 @@ a {
   color: inherit;
 }
 
-nav.navbar {
+/*/nav.navbar {
   display: flex;
   gap: 20px;
   padding: 15px;
